--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-mustache'
+//	implementation 'org.springframework.boot:spring-boot-starter-mustache'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6")
 	compileOnly 'org.projectlombok:lombok'
