[ENH] Controller, Html

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     properties:
       hibernate:
 #        show_sql: true
