--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+#      ddl-auto: none
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     properties:
       hibernate:
