[ENH] Member API
Member API

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
-#      ddl-auto: none
+#      ddl-auto: create
+      ddl-auto: none
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     properties:
       hibernate:
